--- a/index.html
+++ b/index.html
@@ -16,27 +16,23 @@
                 background-color: #2c3e50;
             }
 
-            .login {
-              background: #eceeee;
-              border: 1px solid #42464b;
-              border-radius: 6px;
-              height: 257px;
-              margin: 20px auto 0;
-              width: 298px;
+            input[type="password"], input[type="text"] {
+                background: linear-gradient(top, #d6d7d7, #dee0e0);
+                border: 1px solid #a1a3a3;
+                border-radius: 4px;
+                box-shadow: 0 1px #fff;
+                box-sizing: border-box;
+                color: #696969;
+                height: 39px;
+                margin: 31px 0 0 29px;
+                padding-left: 37px;
+                transition: box-shadow 0.3s;
+                width: 240px;
             }
-            .login h1 {
-              background-image: linear-gradient(top, #f1f3f3, #d4dae0);
-              border-bottom: 1px solid #a6abaf;
-              border-radius: 6px 6px 0 0;
-              box-sizing: border-box;
-              color: #727678;
-              display: block;
-              height: 43px;
-              font: 600 14px/1 'Open Sans', sans-serif;
-              padding-top: 14px;
-              margin: 0;
-              text-align: center;
-              text-shadow: 0 -1px 0 rgba(0,0,0,0.2), 0 1px 0 #fff;
+
+            input[type="password"]:focus, input[type="text"]:focus {
+                box-shadow: 0 0 4px 1px rgba(55, 166, 155, 0.3);
+                outline: 0;
             }
 
             input[type="checkbox"] {
@@ -46,10 +42,12 @@
                 position: relative;
                 width: 64px;
             }
+
             input[type="checkbox"]:checked {
                 left: 29px;
                 width: 58px;
             }
+            
             .toggle {
                 display: block;
                 height: 16px;
