--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
         
         <link rel="stylesheet" href="assets/CSS/login-alumno.css" type="text/css" media=screen>
 	    <link rel="stylesheet" href="assets/CSS/registro.css" type="text/css" media=screen>
+        <link rel="stylesheet" href="assets/CSS/login-profesor.css" type="text/css" media=screen>
         <link rel="preconnect" href="https://fonts.gstatic.com">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
         <link href="https://fonts.googleapis.com/css2?family=Sigmar+One&display=swap" rel="stylesheet">
     </head>
     <body>
