--- a/assets/txt/loginform.html
+++ b/assets/txt/loginform.html
@@ -3,7 +3,8 @@
     
     <body>
         <div>
-            <input type="submit" class="btn_registrar" name="registrarse" value="Regístrate">
+            <input type="submit" class="btn_registrar" name="btn_registrar" value="Regístrate">
+            
         </div>
 
         <form class = "fondo_rectangulo">
