Pre registro y pre login
Faltan detalles de ambos

--- a/assets/txt/loginform.html
+++ b/assets/txt/loginform.html
@@ -14,7 +14,7 @@
 
             <div>
                 <i class="material-icons iconoInput" style="font-size:30px">person</i>
-                <input type="text" class="input-login" name="nombreUsuario" placeholder="Nombre de usuario" id="username" required />
+                <input type="email" class="input-login" name="email" placeholder="Correo" id="username" required />
             </div>
             
             <div>
@@ -23,7 +23,7 @@
             </div>
 
             <div>
-                <input type="submit" class="btn_entrar" value="Entrar">
+                <input type="submit" class="btn_entrar" name="btn_entrar" value="Entrar">
             </div>
             
         </form>
