--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
         <link rel="preconnect" href="https://fonts.gstatic.com">
         <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
         <link href="https://fonts.googleapis.com/css2?family=Sigmar+One&display=swap" rel="stylesheet">
+        <script src="assets/js/registro.js"></script>
+        <script src="assets/js/login_profesor.js"></script>
+        <script src="assets/js/auth.js"></script>
     </head>
     <body>
         
