--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
         <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
         <link href="https://fonts.googleapis.com/css2?family=Sigmar+One&display=swap" rel="stylesheet">
         <script src="assets/js/registro.js"></script>
-        <script src="assets/js/login_profesor.js"></script>
         <script src="assets/js/auth.js"></script>
+        <script src="assets/js/rank.js"></script>
     </head>
     <body>
         
