Iniciar sesión como profesor

--- a/assets/txt/loginform.html
+++ b/assets/txt/loginform.html
@@ -14,7 +14,7 @@
 
             <div>
                 <i class="material-icons iconoInput" style="font-size:30px">person</i>
-                <input type="email" class="input-login" name="email" placeholder="Correo" id="username" required />
+                <input type="email" class="input-login" name="email" placeholder="Correo" id="correo" required />
             </div>
             
             <div>
