Mostrar códigos a tiempo

--- a/assets/txt/showCodes.html
+++ b/assets/txt/showCodes.html
@@ -2,7 +2,7 @@
     <html lang="es">
     
     <body >
-        <div class="wrapper" id="wrapper">
+        <div class="wrapper2" id="wrapper2">
             
         </div>
     </body>
