--- a/index.html
+++ b/index.html
@@ -14,13 +14,14 @@
         <link rel="stylesheet" href="assets/CSS/login-profesor.css" type="text/css" media=screen>
         <link rel="stylesheet" href="assets/CSS/rank.css" type="text/css" media=screen>
         <link rel="stylesheet" href="assets/CSS/codes.css" type="text/css" media=screen>
+        <link rel="stylesheet" href="assets/CSS/showCodes.css" type="text/css" media=screen>
         <link rel="preconnect" href="https://fonts.gstatic.com">
         <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
         <link href="https://fonts.googleapis.com/css2?family=Sigmar+One&display=swap" rel="stylesheet">
         <script src="assets/js/registro.js"></script>
         <script src="assets/js/auth.js"></script>
-        <script src="assets/js/rank.js"></script>
-        <script src="assets/js/codes.js"></script>
+        <script src="assets/js/rank.js" defer></script>
+        <script src="assets/js/codes.js" defer></script>
     </head>
     <body>
         
