Mostrar tarjetas en la puntuación

--- a/assets/txt/ranktarget.html
+++ b/assets/txt/ranktarget.html
@@ -3,7 +3,7 @@
     
     <body >
         <div class="wrapper" id="wrapper">
-            
+            <script src="../js/showRank.js"></script>
         </div>
     </body>
 </html>
