--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
         <link href="https://fonts.googleapis.com/css2?family=Sigmar+One&display=swap" rel="stylesheet">
         <script src="assets/js/registro.js"></script>
         <script src="assets/js/auth.js"></script>
-        <script src="assets/js/rank.js" defer></script>
         <script src="assets/js/codes.js" defer></script>
+        <script src="assets/js/rank.js"></script>
     </head>
     <body>
         
