Inicio de sesión correcto
Arreglo de tarjetas, inicio de sesión y creación de nuevos códigos de grupos

--- a/assets/txt/createCode.html
+++ b/assets/txt/createCode.html
@@ -6,15 +6,15 @@
             <div>
                 <label class="label_reg">Seleccione una categoría:</label>
                 <select name="select" class="registro" id="categoriaPl" required>
-                    <option value="value1" selected >Planeta Arcus - Sumas</option>
-                    <option value="value2">Planeta Mudi - Restas</option>
-                    <option value="value3">Planeta Teyvat - Multiplicaciones</option>
-                    <option value="value4">Planeta Tropius - Capacidad y peso</option>
-                    <option value="value5">Planeta Krobus - Divisiones</option>
-                    <option value="value6">Planeta Carvus - Fracciones impropias</option>
-                    <option value="value7">Planeta Durean - Regla de tres</option>
-                    <option value="value8">Planeta Plusalia - Fracciones propias</option>
-                    <option value="value9">Planeta Narmú - Figuras</option>
+                    <option value="Planeta Arcus - Sumas" selected >Planeta Arcus - Sumas</option>
+                    <option value="Planeta Mudi - Restas">Planeta Mudi - Restas</option>
+                    <option value="Planeta Teyvat - Multiplicaciones">Planeta Teyvat - Multiplicaciones</option>
+                    <option value="Planeta Tropius - Capacidad y peso">Planeta Tropius - Capacidad y peso</option>
+                    <option value="Planeta Krobus - Divisiones">Planeta Krobus - Divisiones</option>
+                    <option value="Planeta Carvus - Fracciones impropias">Planeta Carvus - Fracciones impropias</option>
+                    <option value="Planeta Durean - Regla de tres">Planeta Durean - Regla de tres</option>
+                    <option value="Planeta Plusalia - Fracciones propias">Planeta Plusalia - Fracciones propias</option>
+                    <option value="Planeta Narmú - Figuras">Planeta Narmú - Figuras</option>
                   </select>
             </div>
 
@@ -27,11 +27,6 @@
                 <label class="label_reg">Grupo:</label>
                 <input type="text"  class="registro" name="grupo" placeholder="PE: A" id="grupo" required/>
             </div>
-
-            <div>
-                <input type="submit" class="btn_entrar" name="btn_crearCod" value="Generar código">
-            </div>
-            
         </form>
     </body>
 </html>
