--- a/assets/txt/loginform.html
+++ b/assets/txt/loginform.html
@@ -23,7 +23,7 @@
             </div>
 
             <div>
-                <input type="submit" class="btn_entrar" name="btn_entrar" value="Entrar">
+                <input type="button" class="btn_entrar" name="btn_entrar" value="Entrar">
             </div>
             
         </form>
